# crazy-pizza-rl

./: LICENSE  README.md  main.py  pyproject.toml
src/project/: __main__.py
src/project/game/: agent.py  board.py  condition.py  constants.py  engine.py  queue.py
src/project/logging/: __init__.py  logger.py  renderer.py  types.py
src/project/settings/: __init__.py  core.py
src/project/settings/base/: __init__.py  settings.py  submodel.py
src/project/settings/model/: log.py
